@@ -35,7 +35,7 @@ import org.nd4j.linalg.api.ops.impl.reduce.bool.IsInf;
 import org.nd4j.linalg.api.ops.impl.reduce.bool.IsNaN;
 import org.nd4j.linalg.api.ops.impl.reduce.longer.CountNonZero;
 import org.nd4j.linalg.api.ops.impl.reduce3.CosineSimilarity;
-import org.nd4j.linalg.api.ops.impl.transforms.comparison.OldEqualTo;
+import org.nd4j.linalg.api.ops.impl.transforms.custom.EqualTo;
 import org.nd4j.linalg.api.ops.impl.transforms.custom.SoftMax;
 import org.nd4j.linalg.api.shape.options.ArrayOptionsHelper;
 import org.nd4j.linalg.factory.Nd4j;
@@ -104,7 +104,7 @@ public class MixedDataTypesTests extends BaseNd4jTest {
 
     @Test
     public void testBasicCreation_5() {
-        val scalar = Nd4j.trueScalar(new Integer(1));
+        val scalar = Nd4j.scalar(Integer.valueOf(1));
         assertNotNull(scalar);
         assertEquals(0, scalar.rank());
         assertEquals(1, scalar.length());
@@ -113,8 +113,58 @@ public class MixedDataTypesTests extends BaseNd4jTest {
     }
 
     @Test
+    public void testBasicCreation_5_0() {
+        val scalar = Nd4j.scalar(Long.valueOf(1));
+        assertNotNull(scalar);
+        assertEquals(0, scalar.rank());
+        assertEquals(1, scalar.length());
+        assertEquals(DataType.LONG, scalar.dataType());
+        assertEquals(1.0, scalar.getInt(0), 1e-5);
+    }
+
+    @Test
+    public void testBasicCreation_5_1() {
+        val scalar = Nd4j.scalar(Double.valueOf(1));
+        assertNotNull(scalar);
+        assertEquals(0, scalar.rank());
+        assertEquals(1, scalar.length());
+        assertEquals(DataType.DOUBLE, scalar.dataType());
+        assertEquals(1.0, scalar.getDouble(0), 1e-5);
+    }
+
+    @Test
+    public void testBasicCreation_5_2() {
+        val scalar = Nd4j.scalar(Float.valueOf(1));
+        assertNotNull(scalar);
+        assertEquals(0, scalar.rank());
+        assertEquals(1, scalar.length());
+        assertEquals(DataType.FLOAT, scalar.dataType());
+        assertEquals(1.0, scalar.getDouble(0), 1e-5);
+    }
+
+    @Test
+    public void testBasicCreation_5_3() {
+        val scalar = Nd4j.scalar(Short.valueOf((short) 1));
+        assertNotNull(scalar);
+        assertEquals(0, scalar.rank());
+        assertEquals(1, scalar.length());
+        assertEquals(DataType.SHORT, scalar.dataType());
+        assertEquals(1.0, scalar.getDouble(0), 1e-5);
+    }
+
+    @Test
+    public void testBasicCreation_5_4() {
+        val scalar = Nd4j.scalar(Byte.valueOf((byte) 1));
+        assertNotNull(scalar);
+        assertEquals(0, scalar.rank());
+        assertEquals(1, scalar.length());
+        assertEquals(DataType.BYTE, scalar.dataType());
+        assertEquals(1.0, scalar.getDouble(0), 1e-5);
+    }
+
+    @Test
     public void testBasicCreation_6() {
-        val scalar = Nd4j.trueScalar(1);
+        val scalar = Nd4j.scalar(1);
         assertNotNull(scalar);
         assertEquals(0, scalar.rank());
         assertEquals(1, scalar.length());
@@ -124,7 +174,7 @@ public class MixedDataTypesTests extends BaseNd4jTest {
 
     @Test
     public void testBasicCreation_7() {
-        val scalar = Nd4j.trueScalar(1L);
+        val scalar = Nd4j.scalar(1L);
         assertNotNull(scalar);
         assertEquals(0, scalar.rank());
         assertEquals(1, scalar.length());
@@ -226,7 +276,7 @@ public class MixedDataTypesTests extends BaseNd4jTest {
         val arrayY = Nd4j.create(new int[]{1, 0, 0, 4}, new  long[]{4}, DataType.INT);
         val exp = new long[]{1, 0, 0, 1};
 
-        val result = Nd4j.getExecutioner().exec(new OldEqualTo(arrayX, arrayY));
+        val result = Nd4j.getExecutioner().exec(new EqualTo(arrayX, arrayY, arrayX.ulike().castTo(DataType.BOOL)))[0];
         assertEquals(DataType.BOOL, result.dataType());
         val arr = result.data().asLong();
 
@@ -319,13 +369,13 @@ public class MixedDataTypesTests extends BaseNd4jTest {
         val result = Nd4j.getExecutioner().exec(op);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test(expected = RuntimeException.class)
     public void testTypesValidation_2() {
         val arrayX = Nd4j.create(new int[]{1, 2, 3, 4}, new  long[]{4}, DataType.INT);
         val arrayY = Nd4j.create(new int[]{1, 0, 0, 4}, new  long[]{4}, DataType.LONG);
         val exp = new long[]{1, 0, 0, 1};
 
-        val result = Nd4j.getExecutioner().exec(new OldEqualTo(arrayX, arrayY));
+        val result = Nd4j.getExecutioner().exec(new EqualTo(arrayX, arrayY, arrayX.ulike().castTo(DataType.BOOL)))[0];
         val arr = result.data().asLong();
 
         assertArrayEquals(exp, arr);
